--- a/index.html
+++ b/index.html
@@ -144,13 +144,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="My Skills.html">My Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="My Work.html">My works</a>
+              <a class="nav-link" href="My Work.html">My Works</a>
             </li>
           </ul>
         </div>
